--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://172.31.0.29:9980/pinnacloud/</sonar.host.url>
-		<sonar.login>squ_7243b7a08fa9dc616c02b7eab829ec86e8769898</sonar.login>
+		<sonar.host.url>http://192.168.103.95:9000/</sonar.host.url>
+		<sonar.login>squ_9eb8d8fa5a36213937d693d913ff015ad9c5ec87</sonar.login>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
